name:                unlimited-tcp-works
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GrandArchTemplar/unlimited-tcp-works#readme
license:             MIT
license-file:        LICENSE
author:              GrandArchTemplar
maintainer:          GrandArchTemplar@gmail.com
copyright:           2018 GrandArchTemplar
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable unlimited-tcp-works
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
